--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/home.css">
   <link rel="stylesheet" href="/styles/responsive.css">
+  <link rel="stylesheet" href="/styles/modal.css">
+
 </head>
 
 <body>
@@ -35,6 +37,26 @@
 
     </div>
   </div>
+
+  <div id="modal" class="hide">
+    <div class="content">
+      <div class="header">
+        <h1>Pontos de Coleta</h1>
+        <a href="#">Fechar</a>
+      </div>
+      <form action="/search-result.html">
+        <label for="search">Cidade</label>
+        <div class="search field">
+          <input type="text" name="search" placeholder="Pesquise por cidade">
+          <button>
+            <img src="/assets/search.svg" alt="Buscar">
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <script src="/scripts/index.js"></script>
 
 </body>
 
